[package]
name = "chainsaw"
version = "1.11.6"
edition = "2018"
license = "LGPL-3.0-or-later"
description = "A tool to manipulate newick trees"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
itertools = "0.10"
newick = "0.8"
rusqlite = "0.26.1" # Don't update (Guix)
syntesuite = "0.2"

[lib]
name = "chainsaw"
path = "src/lib.rs"

[package.metadata.release]
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]
