[package]
name = "chainsaw"
version = "1.14.2"
edition = "2018"
license = "LGPL-3.0-or-later"
description = "A tool to manipulate newick trees"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
colorsys = "0.6.7"
itertools = "0.10"
md5 = "0.7.0"
newick = "0.11"
ratatui = "0.27.0"
rusqlite = "~0.29" # Don't update (Guix)
syntesuite = "~0.5"
unicode-blocks = "0.1.9"

[lib]
name = "chainsaw"
path = "src/lib.rs"

[package.metadata.release]
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]
